fixed accidentally opening links on mobile

--- a/react-portfolio/src/components/pages/Portfolio/Portfolio.css
+++ b/react-portfolio/src/components/pages/Portfolio/Portfolio.css
@@ -68,6 +68,19 @@
     background: var(--accent2);
 }
 
+.project-link.disabled {
+    pointer-events: none;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 /* typography */
 .project-title {
     position: absolute;
